--- a/style.css
+++ b/style.css
@@ -2,7 +2,17 @@ html {
     margin: 0;
     padding: 0;
     border: 0;
-    font-family: monospace;
+    font-family: "Roboto", monospace;
+}
+
+body {
+    background-color: #DDD0C8;
+}
+
+h1 {
+    font-size: 2.8em;
+    font-weight: 900;
+    margin: 40px 0;
 }
 
 #container {
@@ -15,42 +25,73 @@ html {
 }
 
 #buttonsContainer {
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
+
 
 #scoreBoxContainer {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
-.scoreBox{
+#scoreBoxPlayer, #scoreBoxComputer {
     width: 200px;
     margin: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
 }
 
-.selectionBox {
+#playerSelection, #computerSelection {
     height: 130px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-
-
 img {
-    height: 80px;
+    height: 50%;
 }
 
 button {
-    margin: 20px;
-    background: none;
+    margin: 10px;
     text-decoration: none;
-    border:1px solid black;
+    cursor: pointer;
+    font-weight: bolder;
+    border-radius: 10px;
+    background-color: #FFCC00;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50%;
+}
+
+.playBtn {
     height: 130px;
     width: 130px;
-    cursor: pointer;
+}
+
+.resetBtn {
+    height: 40px;
+    width: 130px;
+
+}
+
+.playBtn:hover, .resetBtn:hover {
+    background-color: #e6b800;
+}
+
+#rock {
+    background-image: url('img/rock.png');
+}
+
+#paper {
+    background-image: url('img/paper.png');
+}
+
+#scissors {
+    background-image: url('img/scissors.png');
 }
