--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
     margin: 0;
     padding: 0;
     border: 0;
-    font-family: "Roboto", monospace;
+    font-family: "Poppins", monospace;
 }
 
 body {
@@ -42,15 +42,26 @@ h1 {
 #scoreBoxPlayer, #scoreBoxComputer {
     width: 200px;
     margin: 10px;
-    border: 1px solid black;
+    border: 1px solid #a5826d;
     border-radius: 10px;
+}
+
+#scoreBoxPlayer>h2, #scoreBoxComputer>h2 {
+    margin-bottom: 0px;
+}
+
+#scoreBoxPlayer>h1, #scoreBoxComputer>h1 {
+    margin: 10px 0 10px;
 }
 
 #playerSelection, #computerSelection {
     height: 130px;
     display: flex;
+    margin: 30px 0;
     justify-content: center;
     align-items: center;
+    font-size: 65px;
+    font-weight: 900;
 }
 
 img {
