--- a/style.css
+++ b/style.css
@@ -3,9 +3,6 @@ html {
     padding: 0;
     border: 0;
     font-family: "Poppins", monospace;
-}
-
-body {
     background-color: #DDD0C8;
 }
 
@@ -29,7 +26,6 @@ h1 {
     justify-content: center;
     align-items: center;
 }
-
 
 #scoreBoxContainer {
     display: flex;
@@ -86,6 +82,7 @@ button {
 }
 
 .resetBtn {
+    display:none;
     height: 40px;
     width: 130px;
 
