--- a/style.css
+++ b/style.css
@@ -45,28 +45,32 @@ h2 {
     width: 100%;
 }
 
-#scoreBoxPlayer, #scoreBoxComputer {
+#scoreBoxPlayer,
+#scoreBoxComputer {
     width: 200px;
     margin: 10px;
     border: 3px solid #a5826d;
     border-radius: 10px;
 }
 
-#scoreBoxPlayer>h2, #scoreBoxComputer>h2 {
+#scoreBoxPlayer>h2,
+#scoreBoxComputer>h2 {
     margin-bottom: 0px;
 }
 
-#scoreBoxPlayer>h1, #scoreBoxComputer>h1 {
+#scoreBoxPlayer>h1,
+#scoreBoxComputer>h1 {
     margin: 10px 0 10px;
 }
 
-#playerSelection, #computerSelection {
+#playerSelection,
+#computerSelection {
     height: 130px;
     display: flex;
     margin: 30px 0;
     justify-content: center;
     align-items: center;
-    font-size: 65px;
+    font-size: 4em;
     font-weight: 900;
 }
 
@@ -96,13 +100,14 @@ button {
 }
 
 .resetBtn {
-    display:none;
+    display: none;
     height: 40px;
     width: 130px;
 
 }
 
-.playBtn:hover, .resetBtn:hover {
+.playBtn:hover,
+.resetBtn:hover {
     background-color: #e6b800;
 }
 
@@ -116,4 +121,36 @@ button {
 
 #scissors {
     background-image: url('img/scissors.png');
+}
+
+@media only screen and (max-width:700px) {
+
+
+    #container {
+        width: 95%;
+    }
+
+    h1 {
+        font-size: 1.8em;
+    }
+
+    h2 {
+        font-size: 1.2em;
+    }
+
+    #computerSelection,
+    #playerSelection {
+        font-size: 2.5em;
+    }
+
+
+
+    .playBtn {
+        height: 80px;
+        width: 80px;
+    }
+
+    button {
+        margin: 5px;
+    }
 }
