--- a/style.css
+++ b/style.css
@@ -23,9 +23,6 @@ h2 {
 }
 
 #container {
-    width: 50%;
-    margin: 0 auto;
-    text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -121,6 +118,41 @@ button {
 
 #scissors {
     background-image: url('img/scissors.png');
+}
+
+
+#innercontainer {
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 2.5rem;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    color: #666666;
+}
+
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    text-align: center;
+    line-height: 30px;
+}
+
+#footer img {
+    height: 20px;
+    vertical-align: middle;
 }
 
 @media only screen and (max-width:700px) {
